# diffusionx

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  README-zh.md  README.md  TODO.md  benchmark.md  build.rs  docs-header.html  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: github-pages.yml  publish-python.yml  test.yml
.kiro/steering/: product.md  structure.md  tech.md
benches/: bm.rs  levy.rs  moment.rs  ou.rs  random.rs  simulation.rs
cuda-kernel/src/: ou.cu
diffusionx/: Cargo.toml  README.md
diffusionx/benches/: random_generation.rs
diffusionx/docs/: settings.html
diffusionx/docs/diffusionx/: all.html  index.html  sidebar-items.js
diffusionx/docs/diffusionx/random/: index.html  sidebar-items.js
diffusionx/docs/diffusionx/random/normal/: fn.standard_rands.html
diffusionx/docs/diffusionx/random/poisson/: fn.rand.html  index.html
diffusionx/docs/diffusionx/random/stable/: fn.rands.html  fn.skew_rand.html  index.html  struct.StandardSkewStable.html  struct.StandardStable.html
diffusionx/docs/diffusionx/random/uniform/: fn.range_rands.html  fn.standard_rand.html  index.html
diffusionx/docs/diffusionx/simulation/: fn.simulate_bm.html  sidebar-items.js  trait.Functional.html  trait.Moment.html  type.Pair.html
diffusionx/docs/diffusionx/simulation/bm/: struct.Bm.html
diffusionx/docs/diffusionx/simulation/levy/: struct.Levy.html
diffusionx/docs/diffusionx/simulation/traits/: trait.CheckedParams.html  trait.Functional.html  trait.Simulation.html
diffusionx/docs/diffusionx/utils/: fn.approx_eq.html  fn.float_eq.html  fn.gamma.html  fn.gammaf.html  fn.minmax.html  fn.sincospi.html  fn.sinpi.html  fn.tgammaf.html  index.html
diffusionx/docs/src/diffusionx/: utils.rs.html
diffusionx/docs/src/diffusionx/random/: exponential.rs.html  mod.rs.html  poisson.rs.html
diffusionx/docs/trait.impl/core/clone/: trait.Clone.js
diffusionx/docs/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
diffusionx/docs/trait.impl/core/convert/: trait.From.js
diffusionx/docs/trait.impl/core/error/: trait.Error.js
diffusionx/docs/trait.impl/core/fmt/: trait.Debug.js
diffusionx/docs/trait.impl/core/marker/: trait.Send.js
diffusionx/docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js
diffusionx/docs/trait.impl/diffusionx/simulation/traits/: trait.CheckedParams.js
diffusionx/docs/trait.impl/rand/distr/distribution/: trait.Distribution.js
diffusionx/src/: cfunction.rs  error.rs  lib.rs  utils.rs
diffusionx/src/random/: exponential.rs  mod.rs  normal.rs  poisson.rs  stable.rs  uniform.rs
diffusionx/src/simulation/: bm.rs  callable.rs  circulant_embedding.rs  fbm.rs  functional.rs  generalized_langevin.rs  langevin.rs  levy.rs  mod.rs  nightly.rs  poisson.rs  prelude.rs  subordinator.rs  traits.rs
diffusionx/src/special_function/: mod.rs  triangle.rs  utils.rs
diffusionx/src/utils/: mod.rs
docs/: src-files.js
docs/diffusionx/: enum.SimulationError.html  enum.XError.html
docs/diffusionx/error/: enum.SimulationError.html  enum.StableError.html  enum.XError.html
docs/diffusionx/simulation/: index.html  trait.CheckedParams.html  trait.Simulation.html
docs/diffusionx/utils/: fn.cumsum.html  fn.eval_poly.html  fn.tanpi.html  fn.tgamma.html
docs/rust/: crates.js  help.html  search-index.js  src-files.js
docs/rust/diffusionx/: all.html  enum.SimulationError.html  enum.StableError.html  enum.XError.html  index.html  type.XResult.html
docs/search.desc/diffusionx/: diffusionx-desc-0-.js
docs/superpowers/plans/: 2026-05-21-metal-objc2-migration.md
docs/superpowers/specs/: 2026-05-21-metal-objc2-migration-design.md
examples/: CIR.rs  bm.rs  bridge.rs  ctrw.rs  excursion.rs  fbm.rs  levy.rs  levy_walk.rs  macros.rs  ou.rs  randoms.rs
kernels/cuda/: CMakeLists.txt  build.sh  langevin.cu  levy.cu
kernels/cuda-kernel/: Cargo.toml  README.md  bm.cu  bng.cu  brownian_bridge.cu  brownian_excursion.cu  brownian_meander.cu  build.rs  cauchy.cu  fbm.cu  gamma.cu  levy.cu  levy_walk.cu  ou.cu  random.cu  utils.cu
kernels/cuda-kernel/src/: bm.cu  geometric_bm.cu  levy.cu  lib.rs  ou.cu  stable.cu  stats.cu
kernels/metal/: cauchy.metal  gamma.metal  ou.metal
kernels/metal-kernel/: bm.metal  levy.metal  ou.metal  random.metal  utils.metal
kernels/metal-kernel/src/: lib.rs
metal-kernel/: Cargo.toml
metal-kernel/src/metal_src/: bm.metal  brownian_excursion.metal  langevin.metal  levy.metal  levy_walk.metal
py-diffusionx/: .gitignore  Cargo.toml  README.md  pyproject.toml
py-diffusionx/benches/: julia_random.jl  numpy_random.ipynb  python_random.ipynb  stable.jl
py-diffusionx/python/diffusionx/: __init__.py  _core.pyi  distribution.py  dtype.py  hello.py  random.py  types.py
py-diffusionx/python/diffusionx/simulation/: __init__.py  basic.py  bm.py  generalized_langevin.py  langevin.py  levy.py  utils.py
py-diffusionx/python/tests/: test_random.py
py-diffusionx/src/: error.rs  lib.rs  random.rs  simulation.rs
src/: error.rs  lib.rs
src/gpu/: backend.rs  bm.rs  gpu_moment.rs  gpu_process.rs  levy.rs  mc.rs  mod.rs  ou.rs  random.rs  simulator.rs  stable.rs  traits.rs
src/gpu/cuda/: all_processes.rs  bm.rs  kernels.rs  kernels.rs.txt  levy.rs  mod.rs  ou.rs  random.rs  rng.rs
src/gpu/metal/: bm.rs  kernels.rs  levy.rs  mod.rs  ou.rs  random.rs  rng.rs
src/random/: exponential.rs  gamma.rs  mod.rs  normal.rs  poisson.rs  stable.rs  uniform.rs
src/simulation/: basic.rs  ctrw.rs  functional.rs  generalized_langevin.rs  langevin.rs  levy_walk.rs  macros.rs  mod.rs  ou.rs  prelude.rs  traits.rs
src/simulation/basic/: continuous.rs  discrete.rs  functional.rs  inverse.rs  moment.rs  point.rs  tamsd.rs
src/simulation/continuous/: bm.rs  bng.rs  brownian_bridge.rs  brownian_excursion.rs  brownian_meander.rs  cauchy.rs  fbm.rs  (+9 more)
src/utils/: circulant_embedding.rs  csv.rs  functions.rs  mod.rs  sgn.rs
src/visualize/: config.rs  draw.rs  mod.rs  plotter.rs
tests/: metal_test.rs  visualization.rs
(+140 files in other folders)
