[package]
name = "diffusionx"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "A library for random number/stochastic process simulation with high performance."
license = "MIT"
repository = "https://github.com/tangxiangong/diffusionx"
readme = "README.md"

[[bench]]
name = "random_generation"
harness = false

[lib]
name = "diffusionx"
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
rand_distr = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
