[package]
name = "py-diffusionx"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { workspace = true }
diffusionx = { path = "../diffusionx" }
thiserror = { workspace = true }
numpy = { workspace = true }
rayon = { workspace = true }
num_cpus = "1.16.0"
rand = { workspace = true }
