[project]
name = "diffusionx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "tangxiangong", email = "tangxiangong@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["matplotlib>=3.10.0", "numpy>=2.2.2"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "diffusionx._core"
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
